--- a/README
+++ b/README
@@ -2,3 +2,5 @@ This is 'astral' a Python module for calculating times of the day for
 various positions of the sun.
 
 For documentation see the HTML documentation in the 'doc' directory. 
+
+To build the cython extension, run "python setup.py build_ext --inplace"
